--- a/_locales/ja/messages.json
+++ b/_locales/ja/messages.json
@@ -56,6 +56,10 @@
     "message": "オプション",
     "description": "Options view"
   },
+  "options_quickLabel": {
+    "message": "拡張機能のアイコンをクリックするだけで録音を開始する",
+    "description": "Options view"
+  },
   "options_muteLabel": {
     "message": "録音中はタブをミュートにする",
     "description": "Options view"
